# enterprise-onelab-rs

./: .gitignore  Cargo.toml  README.md
desktop/: Cargo.toml
desktop/src/: main.rs
lib/: Cargo.toml
services/server/: Cargo.toml
services/server/src/: main.rs  socket.rs
teacher-fronted/: package-lock.json  package.json  tailwind.config.js
teacher-fronted/public/: index.html
teacher-fronted/src/: App.js  data.json  index.css
teacher-fronted/src/Components/: Auth.js
teacher-fronted/src/Components/MainView/: MainView.js
teacher-fronted/src/Components/MainView/ClassManager/: ClassView.js
teacher-fronted/src/Components/MainView/FileManager/: Document.js  DocumentItem.js
teacher-fronted/src/Components/MainView/RemoteManager/: Remote.js  RemoteList.js  RemoteViewer.js
teacher-fronted/src/Components/Ribbon/: Ribbon.js
