[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-broker = "0.4.1"
actix-files = "0.5.0"
actix-rt = "2.2.0"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
env_logger = "0.9.0"
futures = "0.3.17"
log = "0.4.14"
uuid = "0.8.2"